openshift/client.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tallerfullstackclient
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackclient
    app.kubernetes.io/component: tallerfullstackclient
    app.kubernetes.io/instance: tallerfullstackclient
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: tallerfullstackclient
  template:
    metadata:
      labels:
        deployment: tallerfullstackclient
    spec:
      containers:
        - name: tallerfullstackclient
          image: acrazuredevopsopenshift.azurecr.io/tallerfullstackclient:1.0.0.5
          ports:
            - containerPort: 8080
              protocol: TCP  
      restartPolicy: Always      
  strategy:
    type: RollingUpdate

---

kind: Service
apiVersion: v1
metadata:
  name: tallerfullstackclient
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackclient
    app.kubernetes.io/component: tallerfullstackclient
    app.kubernetes.io/instance: tallerfullstackclient
spec:  
  ports:    
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    deployment: tallerfullstackclient

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tallerfullstackclient
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackclient
    app.kubernetes.io/component: tallerfullstackclient
    app.kubernetes.io/instance: tallerfullstackclient
spec:
  host: >-
    tallerfullstackclient.apps-crc.testing
  to:
    kind: Service
    name: tallerfullstackclient
  port:
    targetPort: 8080
