openshift/service.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tallerfullstackservice  
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackservice
    app.kubernetes.io/component: tallerfullstackservice
    app.kubernetes.io/instance: tallerfullstackservice
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: tallerfullstackservice
  template:
    metadata:
      labels:
        deployment: tallerfullstackservice
    spec:
      containers:
        - name: tallerfullstackservice
          image: acrazuredevopsopenshift.azurecr.io/tallerfullstackservice:1.0.0.3
          ports:
            - containerPort: 8080
              protocol: TCP  
      restartPolicy: Always      
  strategy:
    type: RollingUpdate

---

kind: Service
apiVersion: v1
metadata:
  name: tallerfullstackservice
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackservice
    app.kubernetes.io/component: tallerfullstackservice
    app.kubernetes.io/instance: tallerfullstackservice  
spec:  
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    deployment: tallerfullstackservice

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tallerfullstackservice
  namespace: azuredevopsopenshift
  labels:
    app: tallerfullstackservice
    app.kubernetes.io/component: tallerfullstackservice
    app.kubernetes.io/instance: tallerfullstackservice  
spec:
  host: >-
    tallerfullstackservice.apps-crc.testing
  to:
    kind: Service
    name: tallerfullstackservice    
  port:
    targetPort: 8080
